--- a/project2/src/index.scss
+++ b/project2/src/index.scss
@@ -192,6 +192,9 @@ ol {
   font-family: 'Caprasimo', cursive;
   padding: 1rem;
 }
+#game-board button:disabled {
+  cursor: not-allowed;
+}
 
 #game-over {
   position: absolute;
