--- a/project3-investment-calc/src/components/InvResults/InvResults.module.scss
+++ b/project3-investment-calc/src/components/InvResults/InvResults.module.scss
@@ -1,10 +1,11 @@
 .result {
   max-width: 50rem;
   margin-top: 1rem;
-  padding: 1rem;
   table-layout: fixed;
   border-spacing: 1rem;
   text-align: right;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .result thead {
