--- a/project5-refs/src/index.css
+++ b/project5-refs/src/index.css
@@ -98,10 +98,15 @@ header p {
 
 #challenges {
   max-width: 50rem;
-  margin: 3rem auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
   display: flex;
   flex-wrap: wrap;
   gap: 2rem;
+  align-items: center;
+  justify-content: center;
 }
 
 .challenge {
@@ -110,8 +115,7 @@ header p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 2rem;
-  margin: 2rem auto;
+  padding: 1rem;
   background: linear-gradient(#4df8df, #4df0f8);
   color: #221c18;
   box-shadow: 0 2px 8px rgba(35, 34, 34, 0.6);
