--- a/project6-project-management/src/components/App/LoadingOverlay/LoadingOverlay.module.css
+++ b/project6-project-management/src/components/App/LoadingOverlay/LoadingOverlay.module.css
@@ -1,6 +1,6 @@
 .loading-screen {
   /**/
-  --loading-spinner-background-color: rgba(0,0,0,0.5);
+  --loading-spinner-background-color: rgba(0, 0, 0, 0.5);
   /**/
   --popup-border: none;
   /**/
@@ -21,69 +21,70 @@
   z-index: 200;
 }
 
-  .loading-screen > div {
-      position: relative;
-      background: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 30px;
-      border-radius: 30px;
-      gap: 25px;
-      border: var(--popup-border);
-      background-color: var(--body-background-color);
-  }
+.loading-screen > div {
+  position: relative;
+  background: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 30px;
+  border-radius: 30px;
+  gap: 25px;
+  border: var(--popup-border);
+  background-color: var(--body-background-color);
+}
 
 .loading-image-div {
   position: relative;
   color: var(--primary-color);
 }
 
-  .loading-image-div > svg {
-      height: var(--loading-spinner-svg-height);
-      width: var(--loading-spinner-svg-height);
-  }
+.loading-image-div > svg {
+  height: var(--loading-spinner-svg-height);
+  width: var(--loading-spinner-svg-height);
+}
 
-  .loading-image-div > .spinner-border {
-      position: absolute;
-      height: var(--loading-spinner-animation-height);
-      width: var(--loading-spinner-animation-height);
-      left: calc(50% - var(--loading-spinner-animation-height) / 2);
-      top: calc(50% - var(--loading-spinner-animation-height) / 2);
-      animation-duration: 1.5s;
-  }
+.loading-image-div > .spinner-border {
+  position: absolute;
+  height: var(--loading-spinner-animation-height);
+  width: var(--loading-spinner-animation-height);
+  left: calc(50% - var(--loading-spinner-animation-height) / 2);
+  top: calc(50% - var(--loading-spinner-animation-height) / 2);
+  animation-duration: 1.5s;
+}
 
-  /* Copied from bootstrap */
-  .spinner-grow,
-  .spinner-border {
-    display: inline-block;
-    width: var(--bs-spinner-width);
-    height: var(--bs-spinner-height);
-    vertical-align: var(--bs-spinner-vertical-align);
-    border-radius: 50%;
-    animation: var(--bs-spinner-animation-speed) linear infinite var(--bs-spinner-animation-name);
-  }
+/* Copied from bootstrap */
+.spinner-grow,
+.spinner-border {
+  display: inline-block;
+  width: var(--bs-spinner-width);
+  height: var(--bs-spinner-height);
+  vertical-align: var(--bs-spinner-vertical-align);
+  border-radius: 50%;
+  animation: var(--bs-spinner-animation-speed) linear infinite
+    var(--bs-spinner-animation-name);
+}
 
-  @keyframes spinner-border {
-    to {
-      transform: rotate(360deg) /* rtl:ignore */;
-    }
+@keyframes spinner-border {
+  to {
+    transform: rotate(360deg) /* rtl:ignore */;
   }
-  .spinner-border {
-    --bs-spinner-width: 2rem;
-    --bs-spinner-height: 2rem;
-    --bs-spinner-vertical-align: -0.125em;
-    --bs-spinner-border-width: 0.25em;
-    --bs-spinner-animation-speed: 0.75s;
-    --bs-spinner-animation-name: spinner-border;
-    border: var(--bs-spinner-border-width) solid currentcolor;
-    border-right-color: transparent;
-  }
+}
+.spinner-border {
+  --bs-spinner-width: 2rem;
+  --bs-spinner-height: 2rem;
+  --bs-spinner-vertical-align: -0.125em;
+  --bs-spinner-border-width: 0.25em;
+  --bs-spinner-animation-speed: 0.75s;
+  --bs-spinner-animation-name: spinner-border;
+  border: var(--bs-spinner-border-width) solid currentcolor;
+  border-right-color: transparent;
+}
 
-  @media (prefers-reduced-motion: reduce) {
-    .spinner-border,
-    .spinner-grow {
-      --bs-spinner-animation-speed: 1.5s;
-    }
+@media (prefers-reduced-motion: reduce) {
+  .spinner-border,
+  .spinner-grow {
+    --bs-spinner-animation-speed: 1.5s;
   }
+}
