--- a/project6-project-management/src/components/PlaceWishes/PlaceWishes.scss
+++ b/project6-project-management/src/components/PlaceWishes/PlaceWishes.scss
@@ -11,12 +11,15 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  height: 100%;
-  width: 100%;
 
-  margin: 0;
-  padding: 2rem;
-  background: linear-gradient(180deg, #1f1c2c 0%, #1f1c2c 100%);
+  &.MainContainer {
+    height: 100%;
+    width: 100%;
+
+    margin: 0;
+    padding: 2rem;
+    background: linear-gradient(180deg, #1f1c2c 0%, #1f1c2c 100%);
+  }
 
   * {
     box-sizing: border-box;
@@ -187,7 +190,7 @@
     color: #5d0909;
   }
 
-  .modal::backdrop {
+  &.modal::backdrop {
     position: fixed;
     top: 0;
     left: 0;
@@ -197,7 +200,7 @@
     background: rgba(0, 0, 0, 0.6);
   }
 
-  .modal {
+  &.modal {
     min-width: 30rem;
     padding: 0;
     z-index: 2;
@@ -219,7 +222,7 @@
     color: #3e0505;
   }
 
-  .modal .error {
+  &.modal .error {
     margin: auto;
   }
 
