Formatter and Security

--- a/project6-project-management/src/components/FormsPlayground/FormsPlayground.scss
+++ b/project6-project-management/src/components/FormsPlayground/FormsPlayground.scss
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Lato:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Lato:wght@400;700&display=swap");
 
 .forms-playground-container {
   margin: 0;
-  font-family: 'Lato', serif;
+  font-family: "Lato", serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(#d0d6d9, #b1b4ba);
@@ -18,7 +18,7 @@
     margin: 2rem 0;
     text-align: center;
   }
-  
+
   header img {
     width: 5rem;
     height: 5rem;
@@ -27,16 +27,16 @@
     border: 2px solid #758a8a;
     filter: drop-shadow(0 0 4px rgba(31, 42, 42, 0.5));
   }
-  
+
   header h1 {
-    font-family: 'Quicksand', sans-serif;
+    font-family: "Quicksand", sans-serif;
     font-weight: 700;
     font-size: 3rem;
     margin: 1rem 0;
     letter-spacing: 0.2rem;
     color: #2f4444;
   }
-  
+
   form {
     width: 90%;
     max-width: 40rem;
@@ -46,16 +46,16 @@
     border-radius: 8px;
     box-shadow: 0 0 16px 1px rgba(0, 0, 0, 0.5);
   }
-  
+
   .control,
   fieldset {
     margin-bottom: 1rem;
   }
-  
+
   .control.no-margin {
     margin-bottom: 0;
   }
-  
+
   .control label {
     display: block;
     font-size: 0.8rem;
@@ -64,7 +64,7 @@
     text-transform: uppercase;
     font-weight: bold;
   }
-  
+
   .control input {
     display: block;
     width: 100%;
@@ -76,7 +76,7 @@
     background-color: #869999;
     color: #142020;
   }
-  
+
   .control select {
     display: block;
     width: 100%;
@@ -88,17 +88,17 @@
     background-color: #869999;
     color: #142020;
   }
-  
-  .control:has(input[type='checkbox']) {
+
+  .control:has(input[type="checkbox"]) {
     display: flex;
     align-items: center;
   }
-  
-  .control:has(input[type='checkbox']) label {
+
+  .control:has(input[type="checkbox"]) label {
     margin: 0;
   }
-  
-  .control input[type='checkbox'] {
+
+  .control input[type="checkbox"] {
     display: inline-block;
     width: auto;
     max-width: none;
@@ -108,31 +108,31 @@
     background-color: transparent;
     color: #d9e2f1;
   }
-  
+
   .control-error {
     color: #ffca99;
     font-size: 0.8rem;
     height: 2rem;
     padding: 0.5rem 0;
   }
-  
+
   .control-error p {
     margin: 0;
   }
-  
+
   .control-row {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
     gap: 1rem;
   }
-  
+
   .form-actions {
     display: flex;
     justify-content: flex-end;
     gap: 1rem;
   }
-  
+
   .button {
     padding: 0.5rem 1rem;
     font-size: 1rem;
@@ -142,17 +142,17 @@
     color: #d9e2f1;
     cursor: pointer;
   }
-  
+
   .button:hover,
   .button:focus {
     background-color: #319890;
   }
-  
+
   .button-flat {
     background-color: transparent;
     color: #9cbaba;
   }
-  
+
   .button-flat:hover,
   .button-flat:focus {
     background-color: transparent;
